--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<a herf="https://chatgpt.com/share/681a9a61-d7c0-8013-9a8d-bbc6fce047d8">install1</a>
-<a herf="https://github.com/Perfare/Il2CppDumper/releases/tag/v6.7.46">install2</a>
+<a href="https://chatgpt.com/share/681a9a61-d7c0-8013-9a8d-bbc6fce047d8">install1</a>
+<a href="https://github.com/Perfare/Il2CppDumper/releases/tag/v6.7.46">install2</a>
 <a herf="https://github.com/Perfare/Il2CppDumper/releases/tag/v6.7.46">install3</a>
 <a herf="https://github.com/Perfare/Il2CppDumper/releases/tag/v6.7.46">install4</a>
 <a herf="https://github.com/Perfare/Il2CppDumper/releases/tag/v6.7.46">install5</a>
